# Vibration-measurement-system

./: CMakeLists.txt  README.md  prj.conf
VMS_Device/: CMakeLists.txt  prj.conf
VMS_Device/app/: common_types.h  main.c
VMS_Device/app/accelerometer/inc/: acc.h
VMS_Device/app/accelerometer/src/: acc.c
VMS_Device/app/bluetooth/inc/: bluetooth.h
VMS_Device/app/bluetooth/src/: bluetooth.c
VMS_Device/app/button/src/: button.c
VMS_Device/app/led/src/: led.c
VMS_Device/app/pwm/inc/: pwm.h
VMS_Device/app/pwm/src/: pwm.c
app/: main.c
app/accelerometer/inc/: acc.h
app/accelerometer/src/: acc.c
app/bluetooth/inc/: bluetooth.h
app/bluetooth/src/: bluetooth.c
app/button/inc/: button.h
app/led/inc/: led.h
